tests/e2e/expression_mutation_nested.story
b = 1 and (["opened", "labeled"] contains item: "a")
